# bazel-examples

./: BUILD.bazel  MODULE.bazel  gazelle_python.yaml
examples/gcloud_cli_container/: BUILD.bazel
rules/python/: BUILD.bazel  current_py_toolchain.bzl
tools/bq/: BUILD.bazel
tools/gcloud/: BUILD.bazel
