load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

oci_image(
    name = "gcloud_image",
    base = "//rules/python:py_base_image",
    tars = [
        "//third_party/gcloud_sdks:gcloud_aliases",
        "//third_party/gcloud_sdks:gcloud_tar",
    ],
    visibility = ["//visibility:public"],
)

oci_tarball(
    name = "tarball",
    image = ":gcloud_image",
    repo_tags = ["gcloud:latest"],
)
